ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller-resource
  namespace: aksdemo-nspace-d-01
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth

spec:
  rules:
  - host: "frontend.52.188.222.60.nip.io"
    http:
      paths:
      
      - pathType: Prefix          
        path: /(.*)
        backend:
          service: 
            name: frontendui
            port:
              number: 80
  tls: 
  - hosts:
    - frontend.52.188.222.60.nip.io
    secretName: aks-demo-tls-secret
